clang/test/BSC/Negative/Generic/GenericTypeMethods/conflict_member_func/conflict_member_func.cbs
// RUN: %clang_cc1 -verify %s

struct MyStruct<T> {
  T res;
};

int struct MyStruct<T>::foo(struct MyStruct<T> *this, int a) { // expected-note {{previous definition is here}}
  return a;
}

int struct MyStruct<T>::foo(struct MyStruct<T> *this) { // expected-error {{conflicting types for 'foo'}} 
  return 0;
}